[gd_scene load_steps=7 format=3 uid="uid://nj83cu0047r3"]

[ext_resource type="Script" path="res://UI/Scenes/speech_bubble.gd" id="1_b15wx"]
[ext_resource type="Texture2D" uid="uid://dysnuyxonjbv0" path="res://UI/Assets/speechBubble.png" id="2_1jana"]

[sub_resource type="Animation" id="Animation_q7s76"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BubbleContainer:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BubbleContainer:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_5jwrn"]
resource_name = "fadeIn"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BubbleContainer:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.233333, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0.240663, 0.240663), Vector2(1.32247, 1.32247), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BubbleContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_3bo2b"]
resource_name = "fadeOut"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.966667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_f51xp"]
_data = {
"RESET": SubResource("Animation_q7s76"),
"fadeIn": SubResource("Animation_5jwrn"),
"fadeOut": SubResource("Animation_3bo2b")
}

[node name="SpeechBubble" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -98.0
offset_top = -45.0
offset_right = -1806.0
offset_bottom = -1029.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.586842, 0.586842)
pivot_offset = Vector2(99, 48)
mouse_filter = 2
script = ExtResource("1_b15wx")

[node name="BubbleContainer" type="MarginContainer" parent="."]
modulate = Color(1, 1, 1, 0)
self_modulate = Color(0, 0, 0, 0)
custom_minimum_size = Vector2(130, 50)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.368
anchor_top = 0.366
anchor_right = 0.587
anchor_bottom = 0.599
offset_left = -76.016
offset_top = -34.136
offset_right = 70.556
offset_bottom = 36.496
pivot_offset = Vector2(100, 45)
mouse_filter = 2

[node name="NinePatchRect" type="NinePatchRect" parent="BubbleContainer"]
self_modulate = Color(0, 0, 0, 1)
layout_mode = 2
texture = ExtResource("2_1jana")
region_rect = Rect2(1, -2, 214, 122)
patch_margin_left = 55
patch_margin_top = 27
patch_margin_right = 57
patch_margin_bottom = 22

[node name="MarginContainer" type="MarginContainer" parent="BubbleContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Label" type="Label" parent="BubbleContainer/MarginContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 38
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="TextAnim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_f51xp")
}

[connection signal="timeout" from="TextTimer" to="." method="_on_text_timer_timeout"]
[connection signal="animation_finished" from="TextAnim" to="." method="_on_text_anim_animation_finished"]
